Re-organise files and remove requirement for server-side includes.
Instead of relying on server-side includes to stich all the files together
(which at the time was a good idea), include them as separate assets in
the HTML file. This improves error reporting at the cost of more requests.
For a private app this shouldn't be an issue and for production use a
build script can be introduced.

--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,27 @@
 <html lang=en>
 <head>
     <meta charset=utf-8>
-    <title></title>
-    <link rel=stylesheet href=system/modules/core/styles/dependencies.bundle.css>
+    <title>wingman.app</title>
 </head>
 <body>
 
 <div id=__page></div>
 
+<link rel=stylesheet href=system/modules/core/styles/dependencies.bundle.css>
+
 <script src=system/modules/core/scripts/dependencies.bundle.js></script>
-<script src=application/bootstrap.src.js></script>
+
+<script src=system/modules/core/functions.js></script>
+
+<script src=system/modules/core/classes/controller.js></script>
+<script src=system/modules/core/classes/error.js></script>
+<script src=system/modules/core/classes/guard.js></script>
+<script src=system/modules/core/classes/i18n.js></script>
+<script src=system/modules/core/classes/route.js></script>
+
+<script src=application/classes/controller/login.js></script>
+
+<script src=application/bootstrap.js></script>
 
 </body>
 </html>
