--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,17 @@
 <script src=system/modules/core/classes/guard.js></script>
 <script src=system/modules/core/classes/i18n.js></script>
 <script src=system/modules/core/classes/route.js></script>
+<script src=system/modules/core/classes/view.js></script>
+<script src=system/modules/core/classes/view/engine.js></script>
+<script src=system/modules/core/classes/view/engine/default.js></script>
+<script src=system/modules/core/classes/view/engine/handlebars.js></script>
 
 <script src=application/classes/controller/login.js></script>
+<script src=application/classes/view/login/index.js></script>
+
+<script id=__template-login-index type=text/x-handlebars-template>
+<!--#include file="application/templates/login/index.hbs" -->
+</script>
 
 <script src=application/bootstrap.js></script>
 
