Add support for template parrtials.

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,16 @@
 <script src=system/modules/core/classes/view/engine/handlebars.js></script>
 
 <script src=application/classes/controller/login.js></script>
+<script src=application/classes/view/default.js></script>
 <script src=application/classes/view/login/index.js></script>
+
+<script id=__template-partials-header type=text/x-handlebars-template>
+<!--#include file="application/templates/partials/header.hbs" -->
+</script>
+
+<script id=__template-partials-footer type=text/x-handlebars-template>
+<!--#include file="application/templates/partials/footer.hbs" -->
+</script>
 
 <script id=__template-login-index type=text/x-handlebars-template>
 <!--#include file="application/templates/login/index.hbs" -->
