Use Python script to traverse and include system and application files.
Instead of including all scripts, styles and templates by hand in the HTML
file, use Python to perform the directory scanning. This will then
automatically pull in any newly created files without the need to modify
the wrapper file (index.html).

--- a/client/index.html
+++ b/client/index.html
@@ -8,39 +8,7 @@
 
 <div id=__page></div>
 
-<link rel=stylesheet href=system/cache/core/styles.bundle.css>
-
-<script src=system/cache/core/scripts.bundle.js></script>
-
-<script src=system/modules/core/functions.js></script>
-
-<script src=system/modules/core/classes/controller.js></script>
-<script src=system/modules/core/classes/error.js></script>
-<script src=system/modules/core/classes/guard.js></script>
-<script src=system/modules/core/classes/i18n.js></script>
-<script src=system/modules/core/classes/route.js></script>
-<script src=system/modules/core/classes/view.js></script>
-<script src=system/modules/core/classes/view/engine.js></script>
-<script src=system/modules/core/classes/view/engine/default.js></script>
-<script src=system/modules/core/classes/view/engine/handlebars.js></script>
-
-<script src=application/classes/controller/login.js></script>
-<script src=application/classes/view/default.js></script>
-<script src=application/classes/view/login/index.js></script>
-
-<script id=__template-partials-epilogue type=text/x-handlebars-template>
-<!--#include file="application/templates/partials/epilogue.hbs" -->
-</script>
-
-<script id=__template-partials-prologue type=text/x-handlebars-template>
-<!--#include file="application/templates/partials/prologue.hbs" -->
-</script>
-
-<script id=__template-login-index type=text/x-handlebars-template>
-<!--#include file="application/templates/login/index.hbs" -->
-</script>
-
-<script src=application/bootstrap.js></script>
+<!--#exec "system/bootstrap.py" -->
 
 </body>
 </html>
