Add support for custom CSS in application/assets/.

--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,7 @@
 
 <!--#exec "system/bootstrap.py" -->
 
+<link rel=stylesheet href=//fonts.googleapis.com/css?family=Droid+Sans />
+
 </body>
 </html>
